# ce-atari

./: .gitattributes  .gitignore  .install-bcm2835.sh  .install-cross-mint.sh  .install-curl.sh  .travis.yml  Makefile  README.md
acsi_fw/: acsi_fw2.uvgui.Miro  acsi_fw2.uvgui.mnohaj  acsi_fw2.uvopt  acsi_fw2.uvproj  bridge.c  bridge.h  datatransfer.c  datatransfer.s  defs.h  eeprom.c  eeprom.h  main.c  mmc.c  mmc.h  mmc_datatransfer.c  scsi.c  scsi.h  timers.c  timers.h
acsi_sw/: ISettingsUser.h  acsidatatrans.cpp  acsidatatrans.h  cconusb.cpp  cconusb.h  ccorethread.cpp  ccorethread.h  datatypes.h  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settingsreloadproxy.h  sleeper.h  swTest.pro  ui_mainwindow.h
acsi_vdhl/: hans.npl  main.vhd  package_pins.ucf
appviasock/: build.sh  client.cpp  main.cpp  start_apps.sh  top.sh  vt100_to_vt52.cpp
baudrateconvertor/: .cproject  .project
ce_conf/: CE_CONF.PRG  Makefile  acsi.c  acsi.h  ce_conf.c  ce_conf.prj  dma.h  find_ce.c  find_ce.h  global.h  hdd_if.c  keys.h  main.c  scsi.c  scsi.h  scsi_falcon.c  scsi_tt.c  stdlib.c  stdlib.h
ce_conf_py/: ce_conf.py  ce_conf.sh  main.py  requirements.txt  screen_floppy.py  screen_hdd_image.py  screen_ids.py  screen_ikbd.py  screen_license.py  screen_network.py  screen_other.py  screen_shared.py  screen_translated.py  screen_update.py  service.cfg  (+4 more)
flash_stm32_2021/: HOWTO  INSTALL  Makefile  Makefile.am  configure.ac  datatypes.h  dev_table.c  gpio.c  init.c  main.c  stm32.c  stm32flash.1
flash_stm32_2021/parsers/: Makefile.am
(+1457 files in other folders)
